--- a/partials/devotional.html
+++ b/partials/devotional.html
@@ -1,3 +1,7 @@
+<div>
+  <h1><a href="http://127.0.0.1:8080/#!/">The Ultimate ReadMe</a></h1>
+</div>
+
 <!-- Trigger the modal with a button -->
 <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">{{username}}'s New Devotional</button>
 
@@ -14,7 +18,6 @@
       <div class="modal-body">
         <p>{{username}}'s Devotional</p>
         <input type="text" ng-model="devotional.text" class="form-control" style="width:575px; height:425px;">
-        <input type="date" ng-model="devotional.date" class="form-control"style="max-width:200px;">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" ng-click="postDevotionals()">Save changes</button>
@@ -24,3 +27,5 @@
 
   </div>
 </div>
+
+<div class="data" ng-repeat="devCollection in devCollection" style="border-style:groove; border-color:rgb(40, 126, 224);">{{devCollection.journal}}<button id="{{devCollection.id}}" type="button" value="{{devCollection.journal}}" class="btn btn-primary" ng-click="destroyDevotionals($event)">Delete Devotional</button></div>
