--- a/partials/devotional.html
+++ b/partials/devotional.html
@@ -5,7 +5,7 @@
     </h1>
   </div>
 
-  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">{{username}}'s New Devotional</button>
+  <button type="button" class="btn btn-outline-warning btn-md" data-toggle="modal" data-target="#myModal">{{username}}'s New Devotional</button>
 
   <div id="myModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
@@ -28,9 +28,12 @@
     </div>
   </div>
 
-  <div class="data" ng-repeat="devCollection in devCollection" style="border-style:groove; border-color:rgb(49, 2, 2);padding-top:100px;max-width:500px;">{{devCollection.journal}}
-    <button id="{{devCollection.id}}" type="button" value="{{devCollection.journal}}" class="btn btn-primary"
+  <div class="data"><p ng-repeat="devCollection in devCollection" style="border-style:groove; border-color:rgb(49, 2, 2);padding-top:200px;
+    max-width:400px;">{{devCollection.journal}}
+    <button id="{{devCollection.id}}" type="button" value="{{devCollection.journal}}" class="btn btn-danger btn-sm" style:"padding-left:100px;"
       ng-click="destroyDevotionals($event)">Delete Devotional</button>
-  </div>
+  </p>
+    </div>
 </div>
 </div>
+
