--- a/partials/home.html
+++ b/partials/home.html
@@ -11,7 +11,7 @@
         <a class="btn btn-primary" href="/#!/register">Register</a>
       </div>
 
-      <h7 ng-if="isLoggedIn" class="top-right">welcome
+      <h7 ng-if="isLoggedIn" class="top-right">Welcome
         <a class="user" href="#" ng-click="logout()">{{username}}</a>
       </h7>
 
