--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,12 @@
 .devotional {
   border-style:groove;
    border-color:rgb(49, 2, 2);
-   padding-top:200px;
- max-width:400px;
+  max-width:350px;
+  height:300px;
+  font-family: 'Abril Fatface',
+  cursive;
+  font-weight: 900;
+  font-size:15px;
 }
 
 body { 
@@ -90,6 +94,8 @@ body {
   cursive;
   font-weight: 900;
   font-size:18px;
+  /* border-style:groove;
+  border-color:rgb(49, 2, 2); */
 }
 
 .dWelcome {
@@ -109,12 +115,12 @@ body {
 }
 
 .dbut {
-  padding-left: 275px;
-  padding-top:15px;
+  padding-left: 227px;
+  padding-top:245px;
 }
 
 .devcText {
-  padding-bottom:100px;
+  
 }
 
 .fWelcome {
